<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>galaxy_camera_u3v</name>
  <version>0.1.0</version>
  <description>ROS2 Driver using Daheng's Galaxy library for usb3 vision</description>
  <author>Nick Hortovanyi</author>
  <maintainer email="nick@aussierobots.com.au">nick</maintainer>
  <license>Apache License, Version 2.0</license>

  <url>https://github.com/aussierobots/galaxy_camera_u3v</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>libopencv-dev</build_depend>
  <build_depend>gxapi</build_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>camera_info_manager</depend>
  <depend>camera_calibration_parsers</depend>
  <depend>yaml_cpp_vendor</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
